--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "priority-queue"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["Gianmarco Garrisi <gianmarcogarrisi@tutanota.com>"]
 description = "A Priority Queue implemented as a heap with a function to efficiently change the priority of an item."
 repository = "https://github.com/garro95/priority-queue"
@@ -8,6 +8,9 @@ readme = "README.rst"
 keywords = ["priority", "queue", "heap"]
 categories = ["data-structures", "algorithms"]
 license = "LGPL-3.0"
+
+[badges]
+travis-ci = { repository = "garro95/priority-queue", branch = "master" }
 
 [dependencies]
 ordermap = "0.2.*"
