--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ travis-ci = { repository = "garro95/priority-queue", branch = "master" }
 [dependencies]
 ordermap = "0.2.*"
 serde = "1"
+serde_test = "1"
