--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ serde = {version = "1", optional = true}
 
 [dev-dependencies]
 serde_test = "1"
+serde_derive = "1"
+serde_json = "1"
+uuid = {version= "0.5", features = ["v4", "serde"] }
