--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ serde_test = "1"
 serde_derive = "1"
 serde_json = "1"
 uuid = {version= "0.5", features = ["v4", "serde"] }
+
+[features]
+benchmarks = []
