--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ serde_test = "1"
 serde_derive = "1"
 serde_json = "1"
 uuid = {version= "0.5", features = ["v4", "serde"] }
+hashbrown = "0.3"
 
 [features]
 benchmarks = []
