Update IndexMap dependency. Add take_mut

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ edition = "2018"
 travis-ci = { repository = "garro95/priority-queue", branch = "master" }
 
 [dependencies]
-indexmap = "0.4"
+indexmap = "1"
 serde = {version = "1", optional = true}
+take_mut = "0.2"
 
 [dev-dependencies]
 serde_test = "1"
