Declare build script

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ categories = ["data-structures", "algorithms"]
 license = "LGPL-3.0"
 edition = "2018"
 
+build = "build.rs"
+
 [badges]
 travis-ci = { repository = "garro95/priority-queue", branch = "master" }
 
