--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
         - rustup target add $TARGET
       script:
         - cargo build -vv --target=$TARGET
-        - cargo-build -v -p test-nostd --target=$TARGET
+        - cargo build -v -p test-nostd --target=$TARGET
 env:
   global:
   - CODECOV_TOKEN=:175096ad-e9ca-4967-b95c-6644fd7d3a11
