--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "1.0.1"
 authors = ["Gianmarco Garrisi <gianmarcogarrisi@tutanota.com>"]
 description = "A Priority Queue implemented as a heap with a function to efficiently change the priority of an item."
 repository = "https://github.com/garro95/priority-queue"
+documentation = "https://docs.rs/priority-queue"
 #readme = "README.rst"
 keywords = ["priority", "queue", "heap"]
 categories = ["data-structures", "algorithms"]
