--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "priority-queue"
-version = "1.0.3"
+version = "1.0.4"
 authors = ["Gianmarco Garrisi <gianmarcogarrisi@tutanota.com>"]
 description = "A Priority Queue implemented as a heap with a function to efficiently change the priority of an item."
 repository = "https://github.com/garro95/priority-queue"
@@ -8,7 +8,7 @@ documentation = "https://docs.rs/priority-queue"
 #readme = "README.rst"
 keywords = ["priority", "queue", "heap"]
 categories = ["data-structures", "algorithms"]
-license = "LGPL-3.0"
+license = "LGPL-3.0 OR MPL-2.0"
 edition = "2018"
 
 build = "build.rs"
