--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,13 +17,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - run: rustup target add $TARGET
     - name: Build
       run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
     - name: Build with serde
       run: cargo build --verbose --features serde
-    - name: Run tests with serde
-      run: cargo test --verbose --features serde
     - name: Build for no-std
       run: cargo build -v -p test-nostd --target=$TARGET
+
+  test:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run tests
+      run: cargo test --verbose
+    - name: Run tests with serde
+      run: cargo test --verbose --features serde
+    
