--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ serde = { version = "1", optional = true }
 
 [dev-dependencies]
 serde_test = "1"
-serde_derive = "1"
+serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 uuid = {version= "0.8", features = ["v4", "serde"] }
 hashbrown = "0.9"
