--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ documentation = "https://docs.rs/priority-queue"
 readme = "README.md"
 keywords = ["priority", "queue", "heap"]
 categories = ["data-structures", "algorithms"]
-license = "LGPL-3.0 OR MPL-2.0"
+license = "LGPL-3.0-or-later OR MPL-2.0"
 edition = "2021"
 
 [build-dependencies]
