--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,5 +35,5 @@ benchmarks = []
 members = ["test-nostd"]
 
 [package.metadata.docs.rs]
-features = ["serde"]
+features = ["serde", "nightly"]
 rustdoc-args = ["--cfg", "docsrs"]
