--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ keywords = ["priority", "queue", "heap"]
 categories = ["data-structures", "algorithms"]
 license = "LGPL-3.0-or-later OR MPL-2.0"
 edition = "2021"
+rust-version = "1.65.0"
 
 [build-dependencies]
 autocfg = "1"
