--- a/.github/workflows/static-checks.yml
+++ b/.github/workflows/static-checks.yml
@@ -39,6 +39,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@master
+      - uses: dtolnay/rust-toolchain@stable
       - run: cargo install cargo-msrv
-      - run: cargo msrv verify
+      - run: cargo msrv verify --all-features
