--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ rust-version = "1.65.0"
 [dependencies]
 equivalent = "1.0.1"
 indexmap = {version = "2.2", features = [], default-features = false}
-serde = { version = "1", optional = true }
+serde = { version = "1", optional = true, features = ["alloc"], default-features = false }
 
 [dev-dependencies]
 serde_test = "1"
@@ -23,10 +23,11 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 uuid = {version= "1", features = ["v4", "serde"] }
 hashbrown = "0.14"
+twox-hash = { version = "1.5", default-features = false }
 
 [features]
 default = ["std"]
-std = ["indexmap/std"]
+std = ["indexmap/std", "serde/std"]
 benchmarks = []
 
 [workspace]
