--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,13 +17,29 @@ jobs:
       matrix:
         include:
           - rust: stable
+            features:
+          - rust: stable
             features: std
           - rust: stable
             features: serde
+          - rust: stable
+            features: std,serde
           - rust: beta
             features:
+          - rust: beta
+            features: std
+          - rust: beta
+            features: serde
+          - rust: beta
+            features: std,serde
           - rust: nightly
             features:
+          - rust: nightly
+            features: std
+          - rust: nightly
+            features: serde
+          - rust: nightly
+            features: std,serde
 
     steps:
     - uses: actions/checkout@v4
@@ -31,7 +47,7 @@ jobs:
       with:
         toolchain: ${{ matrix.rust }}
     - name: Run tests
-      run: cargo test --verbose --features "${{ matrix.features }}"
+      run: cargo test --verbose --no-default-features --features "${{ matrix.features }}"
     - name: Run tests in release mode
-      run: cargo test --release --verbose --features "${{ matrix.features }}"
+      run: cargo test --release --verbose --no-default-features --features "${{ matrix.features }}"
     
